# dbg

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  build.py  build.rs  shellcode.ld  symbols.txt  test
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
common/: Cargo.toml
common/src/: lib.rs
core/: Cargo.toml  generate_struct_defs.rs  lib.rs
core/src/: lib.rs
core/src/arch/: hook.rs  mod.rs
core/src/arch/x86_64/: branch.rs  mod.rs  patcher.rs
core/src/comm/: message.rs
core/src/engine/: mod.rs
core/src/hal/: mod.rs
core/src/hooks/: interactive_hook.rs  mod.rs
dbg-test/: Cargo.toml
dbg-test/src/: main.rs
exes/shellcode_linux/: Cargo.toml  aarch64-unknown-none.json  build.rs  x86_64-unknown-none.json
exes/shellcode_linux/src/: main.rs
exes/shellcode_linux2/: Cargo.toml  x86_64-unknown-none.json
exes/shellcode_linux2/src/: main.rs
exes/standard/: Cargo.toml
exes/standard/src/: main.rs
hal/linux/: Cargo.toml  main.rs
hal/linux/bits/: mod.rs
hal/shellcode_linuxgdb/: Cargo.toml
hal/shellcode_linuxgdb/.cargo/: config
hal/shellcode_linuxgdb/src/: lib.rs
hal/stdgdb/: Cargo.toml  main.rs
hal/stdgdb/src/: lib.rs
hal/windows/: Cargo.toml  main.rs
hal/windows/bits/: mod.rs
meme/: main.rs  symbols.txt
python/: debugger.py  requirements_dev.txt  setup.py
python/debugger/: __init__.py  debugger.py  utils.py
python/debugger_core/: Cargo.toml  pyproject.toml
python/debugger_core/src/: lib.rs
test/: a.out  test.c  text.data
tests/: Cargo.toml
tests/src/: main.rs  utils.rs
tests/src/integrated_tests/: mod.rs
