[workspace]
resolver = "2"
members = [
    "core",
    "common",
    "hal/stdgdb",
    "hal/shellcode_linuxgdb",
    "exes/standard",
    "exes/shellcode_linux"
    # "hal/windows"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1