[package]
edition = "2021"
name = "coregdb"
version = "0.1.0"

[lib]
name = "libcore"
path = "src/lib.rs"

[features]
default = ["linux_um"]
linux_um = ["hal-linux-um"]
linux-km = []

[dependencies]
common = {version = "0.1.0", path = "../common"}

base64 = {version = "0.13.0", default-features = false, features = ["alloc"]}
byteorder = {git = "https://github.com/AsafFisher/byteorder", default-features = false}
num-derive = {version = "0.3", default-features = false}
num-traits = {version = "0.2", default-features = false}
serde = {version = "1.0.130", default-features = false, features = ["derive"]}
minicbor =  {version = "0.18.0", default-features = false, features = ["derive", "alloc"]}
serde-json-core = "0.4.0"
static-alloc = "0.2.3"

# Available HALs
hal-linux-um = {version = "0.1.0", path = "../hal/shellcode_linuxgdb", optional = true}

[dependencies.core2]
default-features = false
features = ["nightly", "alloc"]
version = "0.3.2"
