[package]
edition = "2021"
name = "coregdb"
version = "0.1.0"

[lib]
name = "libcore"
path = "src/lib.rs"

[features]
default = ["linux_um"]
linux_um_shellcode = ["hal-linux-um-shellcode", "umm-malloc"]
linux_um = ["hal-linux-um"]

# TODO: make no_logic work without hal.
# The messaginc protocol is used by other libs
no_logic = ["hal-linux-um"]

[dependencies]

base64 = {version = "0.20.0", default-features = false, features = ["alloc"]}

# Twicked byteorder to match core2
byteorder = {git = "https://github.com/AsafFisher/byteorder", default-features = false}
num-derive = {version = "0.3", default-features = false}
num-traits = {version = "0.2", default-features = false}
serde = {version = "1.0.130", default-features = false, features = ["derive"]}
minicbor =  {version = "0.19.0", default-features = false, features = ["derive", "alloc"]}

# TODO: Wait for pull request to aprove and replate this with the crates.io one.
umm-malloc = {version = "0.3.1", git = "https://github.com/AsafFisher/umm-malloc-rs.git", branch="my-origin/enable-pie", default-features = false, features = ["extern-critical-section", "enable-pie"], optional = true}

# Available HALs
hal-linux-um-shellcode = {version = "0.1.0", path = "../hal/shellcode_linuxgdb", optional = true}
hal-linux-um = {version = "0.1.0", path = "../hal/stdgdb", optional = true}
[dependencies.core2]
default-features = false
features = ["nightly", "alloc"]

# To update this dep, byteorder needs to be updated
version = "0.3.3"
