[package]
name = "dbg-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
python_integrated_test = ["inline-python"]

[dependencies]
inline-python = {version="0.10.0", optional=true}
mmap = "0.1"
rstest = "0.15.0"
serial_test = "0.9.0"
