[package]
name = "shellcode"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal-shellcode-linuxgdb = {version = "0.1.0", path = "../../hal/shellcode_linuxgdb"}
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", features=["mem"]}
