cargo-features = ["edition2021"]
[package]
name = "linuxgdb"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "dbg"
path = "main.rs"

# [build-dependencies]
# core = {version = "0.1.0", path = "../../core"}
[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
core = {version = "0.1.0", path = "../../core"}