[package]
edition = "2021"
name = "hal-linux-um"
version = "0.1.0"
resolver = "2"

[lib]
name = "hal"

[dependencies]
rustix = {version = "0.34", default-features = false}

[dependencies.common]
default-features = false
path = "../../common"
version = "0.1.0"

[dependencies.core2]
default-features = false
features = ["nightly", "alloc"]
version = "0.3.2"
