[package]
name = "debugger_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "debugger_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
coregdb = {version = "0.1.0", path = "../../core", default-features = false, features = ["linux_um"]}
minicbor =  {version = "0.19.0", default-features = false, features = ["derive", "alloc"]}
num-derive = {version = "0.3", default-features = false}
num-traits = {version = "0.2", default-features = false}
byteorder = "1.4.3"